<resources>
    <string name="app_name">NUMAD17F-HangXu</string>
    <string name="button_about">About</string>
    <string name="button_generate_error">Generate Error</string>
    <string name="textView_my_email">xuhang.perusasion@gmail.com</string>
    <string name="textView_my_name">Hang Xu</string>
    <string name="textView_my_school_year">2nd Year</string>
    <string name="textView_phone_id">000000000000000</string>
    <string name="textView_version_code">1</string>
    <string name="textView_version_name">1.0</string>
    <string name="button_clear">Clear</string>
    <string name="button_acknowledgements">Acknowledgements</string>
    <string name="editText_userInput">Please type your word</string>
    <string name="textView_wordList">The detected word is...</string>
    <string name="button_dictionary">Dictionary</string>
    <string name="textView_ack_image">sketchpad</string>
    <string name="textView_ack_code">StackOverFlow</string>
    <string name="textView_ack_people">Zhiyao Jin</string>
    <string name="button_pause">Pause</string>
    <string name="button_quit">Quit</string>
    <string name="button_newGame">New Game</string>
    <string name="button_resume">Resume</string>
    <string name="textView_scroggle">Scroggle</string>
    <string name="button_instruction">Instruction</string>
    <string name="button_wordGame">Word Game</string>
    <string name="button_ok">OK</string>
    <string name="textView_phase1">Phase 1</string>
    <string name="textView_phase2">Phase 2</string>

    <!-- Word Game - Preference screen strings -->
    <string name="pref_scroggle_music_title">Music</string>
    <string name="pref_scroggle_music_summary">Play background music</string>
    <string name="pref_scroggle_hints_title">Hints</string>
    <string name="pref_scroggle_hints_summary">Show hints during play</string>
    <string name="pref_scroggle_rows_summary">No of rows on the board</string>
    <string name="pref_scroggle_rows">Rows</string>
    <string name="pref_scroggle_cols_summary">No of cols on the board</string>
    <string name="pref_scroggle_cols">Cols</string>
    <string name="pref_scroggle_difficulty_summary">Difficulty level of the game</string>
    <string name="pref_scroggle_difficulty">Difficulty</string>

    <!-- Realtime Database -->
    <string name="user_register">Please Register Or Modify Your User Name</string>
    <string name="user_name_hint">Please Enter Your Name</string>
    <string name="user_learder_board">User Leader Board</string>
    <string name="say_congrats">Say Congrats</string>
    <string name="game_username">UserName: </string>
    <string name="game_score">Score: </string>
    <string name="leader_board">Learder Board</string>
    <string name="score_board">Score Board</string>
    <string name="board">Leader/Score Board</string>
    <string name="register">Register UserName</string>
</resources>
