<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="music"
        android:title="@string/pref_scroggle_music_title"
        android:summary="@string/pref_scroggle_music_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="hints"
        android:title="@string/pref_scroggle_hints_title"
        android:summary="@string/pref_scroggle_hints_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="rows"
        android:entries="@array/wordgame_rows"
        android:summary="@string/pref_scroggle_rows_summary"
        android:entryValues="@array/wordgame_rows_values"
        android:title="@string/pref_scroggle_rows" />
    <ListPreference
        android:key="cols"
        android:entries="@array/wordgame_cols"
        android:summary="@string/pref_scroggle_cols_summary"
        android:entryValues="@array/wordgame_cols_values"
        android:title="@string/pref_scroggle_cols" />
    <ListPreference
        android:key="difficulty"
        android:entries="@array/wordgame_difficulty"
        android:summary="@string/pref_scroggle_difficulty_summary"
        android:entryValues="@array/wordgame_difficulty_values"
        android:title="@string/pref_scroggle_difficulty" />
</PreferenceScreen>