<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:elevation="@dimen/elevation_high"
    android:orientation="vertical"
    android:padding="@dimen/menu_padding"
    tools:context=".WordGame">

    <TextView
        android:text="@string/textView_scroggle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="25dip"
        android:textSize="64.5sp"
        android:typeface="serif"
        android:layout_gravity="center"
        android:textColor="@color/scroggle_title_color" />

    <Button
        android:id="@+id/word_game_continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:background="@color/scroggle_background_color"
        android:textColor="@color/scroggle_title_color"
        android:textStyle="bold"
        android:text="@string/button_resume"/>

    <Button
        android:id="@+id/word_game_new_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:background="@color/scroggle_background_color"
        android:textColor="@color/scroggle_title_color"
        android:textStyle="bold"
        android:text="@string/button_newGame"/>

    <Button
        android:id="@+id/word_game_instruction_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:background="@color/scroggle_background_color"
        android:textColor="@color/scroggle_title_color"
        android:textStyle="bold"
        android:text="@string/button_instruction"/>

    <Button
        android:id="@+id/word_game_acknowledgement_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:background="@color/scroggle_background_color"
        android:textColor="@color/scroggle_title_color"
        android:textStyle="bold"
        android:text="@string/button_acknowledgements"/>
</LinearLayout>